--- a/quiz/index.html
+++ b/quiz/index.html
@@ -123,7 +123,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://protocoloanti-grasa.com/"
+      location.href = "https://protocolocero-vientre.online/"
     }
   </script>
 </body>
